--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
   </head>
   <body>
     <canvas id="game"></canvas>
+    <div id="page"></div>
     <div id="ui"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
