Connected Game to Website section

--- a/index.html
+++ b/index.html
@@ -10,6 +10,10 @@
   </style>    
   </head>
   <body>
+    <!-- WEBSITE ROOT -->
+    <div id="website-root"></div>
+
+    <!-- GAME SECTION (hidden until Play) -->
     <canvas id="game"></canvas>
     <div id="page"></div>
     <div id="ui"></div>
